# TRNovel-npm

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  release.sh
.cargo/: config.toml
.github/workflows/: CI.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
