
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "trnovel"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "3.0.0"
trnovel = "0.8.2"

[dependencies.napi]
version = "3.0.0"
features = ["async"]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
